--- a/index.html
+++ b/index.html
@@ -1,17 +1,3 @@
-<?php
-
-/**
- * Bluecadet Javascript Toolkit
- * 
- * @author Bluecadet, developers@bluecadet.com
- * @license MIT
- * @license https://github.com/bluecadet/JS_Toolkit/blob/master/LICENSE.txt
- *
- * Usage examples of the tools included in this toolkit.
- */
-
-
-?>
 <!DOCTYPE html>
 <html>
 <head>
@@ -32,8 +18,8 @@
 			<div class="group">
 				<h2>jQuery</h2>
 				<ul>
-					<li><a href="examples/jquery/animateauto.php">animateauto</a></li>
-					<li><a href="examples/jquery/flipbook.php">Flipbook</a></li>
+					<li><a href="examples/jquery/animateauto.html">animateauto</a></li>
+					<li><a href="examples/jquery/flipbook.html">Flipbook</a></li>
 					<li>Lachance Effect</li>
 					<li>Uniform Scale</li>
 				</ul>
